Bug 953334 - Clear the clip on the surface when we get a new DC. r=BenWa, a=bajaj

Currently we can think that we have a clip set on the DC when we actually
don't. Calling _cairo_win32_surface_set_clip_region(NULL) clears this so that
when we call it with the a region we will set it properly on the new DC that
doesn't have the clip set on it.