gfx/cairo/cairo/src/cairo-win32-surface.c
@@ -502,6 +502,16 @@ _cairo_win32_surface_finish (void *abstract_surface)
     return CAIRO_STATUS_SUCCESS;
 }
 
+static void
+get_d3d9_dc_and_clear_clip (cairo_win32_surface_t *surface)
+{
+    IDirect3DSurface9_GetDC (surface->d3d9surface, &surface->dc);
+    // The DC that we get back from the surface will not have
+    // a clip so clear surface->clip_region so that we don't think we have
+    // one when we don't.
+    _cairo_win32_surface_set_clip_region (surface, NULL);
+}
+
 static cairo_status_t
 _cairo_win32_surface_d3d9_lock_rect (cairo_win32_surface_t  *surface,
 				   int                     x,
@@ -521,7 +531,7 @@ _cairo_win32_surface_d3d9_lock_rect (cairo_win32_surface_t  *surface,
 	                             &rectout, &rectin, 0);
     surface->dc = 0; // Don't use the DC when this is locked!
     if (hr) {
-        IDirect3DSurface9_GetDC (surface->d3d9surface, &surface->dc);
+	get_d3d9_dc_and_clear_clip (surface);
         return CAIRO_INT_STATUS_UNSUPPORTED;
     }
     local = cairo_image_surface_create_for_data (rectout.pBits,
@@ -530,12 +540,12 @@ _cairo_win32_surface_d3d9_lock_rect (cairo_win32_surface_t  *surface,
 						 rectout.Pitch);
     if (local == NULL) {
 	IDirect3DSurface9_UnlockRect (surface->d3d9surface);
-	IDirect3DSurface9_GetDC (surface->d3d9surface, &surface->dc);
+	get_d3d9_dc_and_clear_clip (surface);
         return CAIRO_INT_STATUS_UNSUPPORTED;
     }
     if (local->base.status) {
 	IDirect3DSurface9_UnlockRect (surface->d3d9surface);
-	IDirect3DSurface9_GetDC (surface->d3d9surface, &surface->dc);
+	get_d3d9_dc_and_clear_clip (surface);
         return local->base.status;
     }
 
@@ -709,7 +719,7 @@ _cairo_win32_surface_release_source_image (void                   *abstract_surf
 
     if (local && local->d3d9surface) {
 	IDirect3DSurface9_UnlockRect (local->d3d9surface);
-	IDirect3DSurface9_GetDC (local->d3d9surface, &local->dc);
+	get_d3d9_dc_and_clear_clip (surface);
 	cairo_surface_destroy ((cairo_surface_t *)image);
     } else {
 	cairo_surface_destroy ((cairo_surface_t *)local);
@@ -784,7 +794,7 @@ _cairo_win32_surface_release_dest_image (void                    *abstract_surfa
 
     if (local->d3d9surface) {
 	IDirect3DSurface9_UnlockRect (local->d3d9surface);
-	IDirect3DSurface9_GetDC (local->d3d9surface, &local->dc);
+	get_d3d9_dc_and_clear_clip (surface);
 	cairo_surface_destroy ((cairo_surface_t *)image);
     } else {
 
